--- a/index.html
+++ b/index.html
@@ -23,9 +23,32 @@
                 <button class="tools_button">купить</button>
             </div>
 
+            <div class="tools_item">
+                <img class="tools_img" src="img/knife.png" alt="кирилл пидор">
+                <span class="tools_name">пидор</span>
+                <span class="tools_price">от 500 руб.</span>
+                <button class="tools_button">купить</button>
+            </div>
+
+            <div class="tools_item">
+                <img class="tools_img" src="img/knife.png" alt="кирилл пидор">
+                <span class="tools_name">пидор</span>
+                <span class="tools_price">от 500 руб.</span>
+                <button class="tools_button">купить</button>
+            </div>
+            
+            <div class="tools_item">
+                <img class="tools_img" src="img/knife.png" alt="кирилл пидор">
+                <span class="tools_name">пидор</span>
+                <span class="tools_price">от 500 руб.</span>
+                <button class="tools_button">купить</button>
+            </div>
+
 
 
          </div>
      </section>
+
+     <script src="main.js"></script>
 </body>
 </html>
